--- a/css/theme-outline.css
+++ b/css/theme-outline.css
@@ -1,25 +1,34 @@
 #MAIN_WRAPPER{
 
- }
+}
 #DASHBOARD{
     overflow: hidden;
     position: fixed;
+
 }
 #BODY{
+    background-color: papayawhip;
+    position: fixed;
     overflow: hidden;
+    /*transition: width ease-in 1s, margin-left ease-out 1s;*/
+
+
 }
 #HEADER{
+    overflow: hidden;
 
 }
-#CONTENT{
+#CONTENT {
     overflow: auto;
-
 }
 #FOOTER{
     overflow: hidden;
 
 }
 
+
 .ThemeAnimate{
-    transition: width 1.0s,height 1.0s,margin-left 1.0s,background-color 1.5s,color 1.5s;;
+    /*transition: width 1s ease-in-out,height 1s ease-in-out 1s,margin-left 1s ease-in-out 1s,background-color 1s ease-out 1s,color 1s ease-in-out 1s;*/
+
+    transition: margin 2s,width 2s, height 2s,color 2s, background-color 2s;
 }
